Week10/Lab/Lab2/canary-web-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-web-v2
  labels: { app: vote-web-v2 }
spec:
  replicas: 1
  selector:
    matchLabels: { app: vote-web-v2 }
  template:
    metadata:
      labels: { app: vote-web-v2 }
    spec:
      containers:
      - name: web
        image: dockersamples/examplevotingapp_vote:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-v2-svc
spec:
  selector: { app: vote-web-v2 }
  ports:
  - port: 80
    targetPort: 80
    name: http
