Week10/Lab/Lab2/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  labels: { app: vote-web }
spec:
  type: ClusterIP
  selector: { app: vote-web }
  ports:
  - name: http
    port: 80
    targetPort: 80
